wording fix plus button contrast fix for better projecting.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -131,27 +131,18 @@ polyline{
     padding: 5px;
     font-size: 14px;
     color: #2D2D2D;
-    background-color: #595b5b;
+    background-color: #8D8D8D;
     border: 1px solid #333434;
     margin-right: 0px;
     font-weight: bold;
     cursor: pointer;
+    transition: all .2s ease-in
 }
 .btn:hover {
-    background-color: #626465;
-}
-.btn:active {
+    background-color: #CBCBCB;
     border: 1px solid #333434;
-    background-color: #3f4041;
-    box-shadow: inset 0 1px rgba(0,0,0,0.05);
-    background-color: #595b5b;
 }
-.btn:focus {
-    border: 1px solid #0036ff;
-    box-shadow: inset 0 1px rgba(255,255,255,0.36), 0 0 0 2px #6fb5f1;
-    outline: 0;
-    background-color: #595b5b;
-}
+
 .top-btn {
     position: absolute;
     border-radius: 20px;
